First main page

--- a/content/index.html
+++ b/content/index.html
@@ -2,10 +2,24 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="title" content="The Project">
+        <meta name="description" content="The Project - Your Learning Path">
+        <meta name="keywords" content="learning, self-development">
+        <meta name="robots" content="index, follow">        
+        <meta name="language" content="English">
+        <meta name="author" content="Bruno Dantas">                
         <link rel="stylesheet" type="text/css" href="style.css">
         <title>The Project</title>
     </head>
     <body>
-        The Project
+        <p class="center title">The Project</p>
+        <p class="center subtitle">Your Learning Path</p>
+        <p class="center menu">
+            <a href="#">Philosophy</a> |
+            <a href="#">Sociology</a> |
+            <a href="#">Psychology</a>
+        </p>
+        <p class="body"></p>
+        <p class="center footer">The Project © 2021 All rights reserved</p>
     </body>
 </html>
