--- a/content/index.html
+++ b/content/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <meta name="title" content="The Project">
-        <meta name="description" content="The Project - Your Learning Path">
-        <meta name="keywords" content="learning, self-development">
-        <meta name="robots" content="index, follow">        
-        <meta name="language" content="English">
-        <meta name="author" content="Bruno Dantas">                
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <meta charset="utf-8" />
+        <meta name="title" content="The Project" />
+        <meta name="description" content="The Project - Your Learning Path" />
+        <meta name="keywords" content="learning, self-development" />
+        <meta name="robots" content="index, follow" />
+        <meta name="language" content="English" />
+        <meta name="author" content="Bruno Dantas" />
+        <link rel="stylesheet" type="text/css" href="style.css" />
+        <link rel="icon" type="image/png" href="favicon.png" />
         <title>The Project</title>
     </head>
     <body>
